--- a/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
+++ b/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-sini-co-hop-2-18.html
 lastopen = 2024-06-09 23:47:13
 
 [search]
-lastsearch = 2024-08-11 10:45:29
+lastsearch = 2024-08-11 11:48:54
 
 [chanrathanhthuy.com]
 match = -3.2%%
@@ -12,9 +12,9 @@ title = Bí quyết chọn màu sắc chăn ga gối đệm hợp phong thủy
 url = https://chanrathanhthuy.com/hoat-dong-cong-ty/bi-quyet-chon-mau-sac-chan-ga-goi-dem-hop-phong-thuy-1400.html
 
 [demxanh.com]
-match = 38.7%%
-title = Bộ chăn ga gối Singapore King Luxury KL2418
-url = https://demxanh.com/bo-chan-ga-goi-singapore-king-luxury-kl2418.html
+match = -25.8%%
+title = Người tuổi Dậu nên chọn màu chăn ga gối đệm phong ...
+url = https://demxanh.com/nguoi-tuoi-dau-nen-chon-mau-chan-ga-goi-dem-phong-thuy-nao.html?srsltid=AfmBOooxJoOru_U_qZRDd2vwlML7EpcNgUyueFzsAhVIByp7Ciwio_3T
 
 [songhongonline.vn]
 match = 50.0%%
@@ -29,12 +29,12 @@ url = https://changagoidemsonghong.com/chan-ga-goi-te19-09
 [foreverbedding.net]
 match = -3.2%%
 title = Màu Sắc Chăn Ga Gối Đệm Phong Thủy Cho Người Mệnh Hỏa
-url = https://foreverbedding.net/mau-sac-chan-ga-goi-dem-phong-thuy-cho-nguoi-menh-hoa
+url = https://foreverbedding.net/mau-sac-chan-ga-goi-dem-phong-thuy-cho-nguoi-menh-hoa?srsltid=AfmBOoqooPpnKEH0G9MNZ14L2DOBeRLisjdoAEbt_xxaSSfBJZCT28kx
 
 [shopee.vn]
-match = -12.9%%
-title = Bộ Chăn Ga Gối Cotton Tici M2T Bedding Drap Giường Đủ ...
-url = https://shopee.vn/Bộ-Chăn-Ga-Gối-Cotton-Tici-M2T-Bedding-Drap-Giường-Đủ-Kích-Thước-Trải-Nệm-1m-1m2-1m4-1m6-1m8-2m2-Không-Kèm-Ruột-i.240825360.5023438940
+match = -9.7%%
+title = Bộ Chăn Ga Gối Cotton Đũi Flower Vintage Mịn Decor Bo ...
+url = https://shopee.vn/Bộ-Chăn-Ga-Gối-Cotton-Đũi-Flower-Vintage-Mịn-Decor-Bo-Chun-10cm-Ga-Nệm-Đủ-Size-1m2-Đến-2m2-(Không-Kèm-Ruột)-i.214153944.23262254031
 
 [gonbedding.vn]
 match = 41.9%%
@@ -62,9 +62,9 @@ title = LIZD™ chăn ga gối đệm
 url = http://lizd.vn/index.php?route=product/manufacturer/info&manufacturer_id=10
 
 [ninhouse.vn]
-match = -22.6%%
-title = Bảng giá bộ chăn ga gối gia đình giá rẻ tại Tphcm mới nhất ...
-url = https://ninhouse.vn/collections/bo-chan-ga-goi-gia-dinh
+match = -29.0%%
+title = Cách tính vải may drap giường 1m6, 1m8, 2m cho thợ may
+url = https://ninhouse.vn/blogs/news/cach-tinh-vai-may-drap-giuong-1m6-1m8-2m-cho-tho-may?srsltid=AfmBOoo6WXMxPabtxd_dWjbwC6JNGvVQmJ825I9mC2wdrUPCXDk4Xu78
 
 [hantexco.vn]
 match = 51.9%%
@@ -267,7 +267,7 @@ title = 15 oct 1935) by Josiah Cocking
 url = https://downloads.newcastle.edu.au/library/cultural collections/pdf/Cocking-P-1935.pdf
 
 [www.ngochanh.vn]
-match = 19.4%%
-title = CÁCH CHỌN MÀU CHĂN GA GỐI THEO PHONG THỦY
-url = https://www.ngochanh.vn/blogs/meo-vat/cach-chon-mau-chan-ga-goi-theo-phong-thuy
+match = 35.5%%
+title = GIÁ MỘT BỘ CHĂN GA GỐI NHƯ NÀO LÀ HỢP LÝ?
+url = https://www.ngochanh.vn/blogs/meo-vat/gia-mot-bo-chan-ga-goi-nhu-nao-la-hop-ly
 
