--- a/images/chieu-cay-cao-bang-a-16/config.ini
+++ b/images/chieu-cay-cao-bang-a-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-16.html
 lastopen = 2024-06-09 22:42:42
 
 [search]
-lastsearch = 2024-08-11 10:25:28
+lastsearch = 2024-08-11 11:47:27
 
 [shopee.vn]
 match = -21.7%%
@@ -14,7 +14,7 @@ url = https://shopee.vn/Chiếu-Trúc-Tre-Tây-Bắc-Cao-Bằng-Mát-Lạnh-Mùa
 [www.diepxuan.com]
 match = 21.7%%
 title = Chiếu cây Cao Bằng A 140x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-cao-bang-a-140x190.html
+url = https://www.diepxuan.com/chieu-cay-cao-bang-a-140x190.html?srsltid=AfmBOopKnG6pehR1rKGDkfys3H68cwz42BRMGt4E4hPS7elJpOAL0Ipy
 
 [chuyenhangviet.com]
 match = -43.5%%
