--- a/images/chieu-gap-thai-binh-3m/config.ini
+++ b/images/chieu-gap-thai-binh-3m/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-gap-thai-binh-3m.html
 lastopen = 2024-06-09 22:36:42
 
 [search]
-lastsearch = 2024-08-11 02:49:02
+lastsearch = 2024-08-11 11:46:26
 
 [shopee.vn]
-match = 9.1%%
-title = Chiếu cói 3m Đẹp Sang Chuẩn xịn
-url = https://shopee.vn/Chiếu-cói-3m-Đẹp-Sang-Chuẩn-xịn-i.18845103.22331826526
+match = -90.9%%
+title = Chiếu cói 2.2m x 2m chuẩn xịn chiếu cói thái bình chính hiệu
+url = https://shopee.vn/Chiếu-cói-2.2m-x-2m-chuẩn-xịn-chiếu-cói-thái-bình-chính-hiệu-i.18845103.7735992407
 
 [www.facebook.com]
 match = 36.4%%
@@ -22,9 +22,9 @@ title = Xưởng sản xuất chiếu nhựa Thái Bình | Thai Binh
 url = https://m.facebook.com/61553157173242/
 
 [www.lazada.vn]
-match = -9.1%%
-title = Chiếu Nhựa 2mx 3m Giá Tốt T08/2024
-url = https://www.lazada.vn/tag/chieu-nhua-2mx-3m/?srsltid=AfmBOoqjKt-FAJu3MyVlvYHoW-GWQLHSKH0MkubGAS2IerAl4dJOkhdt
+match = -86.4%%
+title = Chiếu Nhựa Thái Lan (1,5m , 1,6m , 1,8mx2m , 1,8mx3m, ...
+url = https://www.lazada.vn/products/chieu-nhua-chieu-nhua-thai-lan-15m-16m-18mx2m-18mx3m18mx4m-2mx2m2-2mx3m-2mx4m-i1552808477.html
 
 [tiki.vn]
 match = -86.4%%
