--- a/images/chieu-truc-cong-ty-14/config.ini
+++ b/images/chieu-truc-cong-ty-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-14.html
 lastopen = 2024-06-09 23:39:55
 
 [search]
-lastsearch = 2024-08-11 01:21:14
+lastsearch = 2024-08-11 11:40:44
 
 [chieutrucsaigon.com]
 match = 0.0%%
@@ -32,9 +32,9 @@ title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
 url = https://demxanh.com/chieu-truc.html
 
 [vongxepsaigon.vn]
-match = -133.3%%
-title = Chiếu trúc chiếu tre loại tốt giá rẻ tại TPHCM - Miễn phí giao ...
-url = https://vongxepsaigon.vn/chieu-truc/
+match = -81.0%%
+title = Chiếu trúc chiếu tre giá rẻ TP.HCM - Giao hàng MIỄN PHÍ
+url = https://vongxepsaigon.vn/chieu-truc-chieu-tre/
 
 [thegioichieutruc.com]
 match = -47.6%%
