--- a/images/ga-chun-dreamland-150x190-ct/config.ini
+++ b/images/ga-chun-dreamland-150x190-ct/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ga-chun-dreamland-150x190-ct.html
 lastopen = 2024-06-07 00:24:00
 
 [search]
-lastsearch = 2024-08-11 09:24:55
+lastsearch = 2024-08-11 11:42:28
 
 [www.diepxuan.com]
-match = 3.6%%
-title = Chiếu trúc Quế Lâm II 150x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-truc-que-lam-ii-150x190.html
+match = -14.3%%
+title = Bộ ga chun chần WarmDream 180x200 HQ - Điệp Xuân
+url = https://www.diepxuan.com/bo-ga-chun-chan-warmdream-180x200-hq.html?srsltid=AfmBOor6kAP1hQeLbhUtLhtCFwpihKiv05fHkofKL1FYek0EGJ496NSO
 
 [www.qcyc.ca]
 match = -53.6%%
@@ -28,8 +28,8 @@ url = https://www.sap.edu.hk/custompage/openiniframe.aspx?ct=custompage&webpagei
 
 [demxanh.com]
 match = -3.6%%
-title = Bộ ga gối chun chần Misuko Tencel Rio 02
-url = https://demxanh.com/bo-ga-goi-chun-chan-misuko-tencel-rio-02.html
+title = Ga gối Sông Hồng Basic cotton BC24101
+url = https://demxanh.com/ga-goi-song-hong-basic-cotton-bc24101.html?srsltid=AfmBOopJ4SKsMhBRTLEFlrWg5JHhRXEU_ZZG9ITrUqRdAZA7kTNRrAZ9
 
 [stevematuro.com]
 match = -39.3%%
