--- a/images/man-tu-bung-tre-em/config.ini
+++ b/images/man-tu-bung-tre-em/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-tre-em.html
 lastopen = 2024-06-07 00:52:30
 
 [search]
-lastsearch = 2024-08-11 09:35:04
+lastsearch = 2024-08-11 11:34:46
 
 [www.mantubung.com]
-match = -138.9%%
-title = Mùng Chụp | Màn Tự Bung Thông Minh Chống Muỗi | Khuyến ...
-url = https://www.mantubung.com/
+match = -100.0%%
+title = Màn trẻ em tự bung chống muỗi đa năng 80cm * 100cm
+url = https://www.mantubung.com/man-tre-em-tu-bung-chong-muoi-da-nang-84845.html
 
 [manbinhminh.com]
 match = -144.4%%
@@ -17,9 +17,9 @@ title = Màn chống muỗi cho bé gấp gọn dễ dàng bao quản, mùng ...
 url = https://manbinhminh.com/2509/man-chong-muoi-cho-be-gap-gon-de-dang-bao-quan-mung-chup-tu-bung.aspx
 
 [shopee.vn]
-match = -127.8%%
-title = Màn chụp cho bé - Giá Tốt, Sale Tháng 08, Ship 0 Đồng
-url = https://shopee.vn/list/màn chụp/cho bé
+match = -100.0%%
+title = màn chụp cho bé giá tốt Tháng 8, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=màn chụp cho bé
 
 [h5.lazada.vn]
 match = -33.3%%
@@ -32,9 +32,9 @@ title = màn chụp trẻ em cao cấp
 url = http://manchupcuongan.com/man-chup-tre-em-80-x-120cm.html
 
 [manthutrang.com]
-match = -127.8%%
-title = Hướng dẫn phân biệt màn tự bung cao cấp và màn nhái ...
-url = https://manthutrang.com/blogs/news/huong-dan-phan-biet-man-tu-bung-cao-cap-va-man-nhai-gia-re
+match = -122.2%%
+title = Màn chụp tự bung cho bé – Những quy tắc sử dụng an ...
+url = https://manthutrang.com/blogs/news/man-chup-tu-bung-cho-be-nhung-quy-tac-su-dung-an-toan-cha-me-can-biet
 
 [easydream.vn]
 match = -111.1%%
