--- a/images/nem-sieu-nhe-9f-12/config.ini
+++ b/images/nem-sieu-nhe-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-12.html
 lastopen = 2024-06-10 01:22:00
 
 [search]
-lastsearch = 2024-08-11 09:22:29
+lastsearch = 2024-08-11 11:47:48
 
 [www.lazada.vn]
 match = -105.6%%
@@ -17,19 +17,19 @@ title = NEM-12
 url = https://www.coastpneumatics.com/product/NEM-12/
 
 [m.facebook.com]
-match = -133.3%%
-title = Người Việt Bolsa/Orange County | 💥Nem Nướng Nha Trang
-url = https://m.facebook.com/groups/nguoivietorangecounty/posts/2888077278009303/
+match = -111.1%%
+title = Siêu Thị Hưng Ngân Q.12 | E ở quận 12 📞☎️ 0906397899
+url = https://m.facebook.com/groups/sieuthihungngan/posts/7876166842497032/
 
 [thegioinem.com]
-match = -105.6%%
-title = Bảng giá nệm Vạn Thành khuyến mãi mới nhất 2024
-url = https://thegioinem.com/bang-gia-nem-van-thanh-moi.html
+match = -155.6%%
+title = Nệm cao su nhân tạo và nệm cao su tổng hợp khác nhau ở ...
+url = https://thegioinem.com/nem-cao-su-nhan-tao-va-cao-su-tong-hop-khac-nhau-o-diem-nao.html
 
 [www.facebook.com]
-match = -155.6%%
-title = Món Ngon Người Việt Houston | Mai thứ sáu 07/12/24 có ...
-url = https://www.facebook.com/groups/monngonnvh/posts/mai-thứ-sáu-071224-có-bún-nem-nướng-9bánh-bột-chiên-5chè-sương-sa-bánh-lọt-5bánh/26396130619978251/
+match = -72.2%%
+title = NEM Fashion - 𝑪𝒉𝒓𝒊𝒔𝒕𝒎𝒂𝒔 𝑰𝒔 𝑪𝒐𝒎𝒊𝒏𝒈… 𝟐𝟎:𝟎𝟎
+url = https://www.facebook.com/story.php/?story_fbid=755958299900203&id=100064581196454
 
 [eva.vn]
 match = -150.0%%
@@ -37,9 +37,9 @@ title = 9X gói nem 10 cái đẹp như 10 nhờ mẹo cực hay, trữ đông .
 url = https://eva.vn/bep-eva/9x-goi-nem-10-cai-dep-nhu-10-nho-meo-cuc-hay-tru-dong-nem-de-lau-van-ngon-c162a501885.html
 
 [www.tiktok.com]
-match = -55.6%%
-title = 🧄🌶🌱🥩 𝙉𝙀𝙈 𝘾𝙃𝙐𝘼 / 𝚅𝙸𝙴𝚃𝙽𝙰𝙼𝙴𝚂𝙴 𝙲𝚄𝚁𝙴𝙳 𝙵𝙴𝚁𝙼𝙴 ...
-url = https://www.tiktok.com/@justlikemoms_/video/7327474225000975662?lang=en
+match = -144.4%%
+title = Chắc nhiều bạn đã nghe đến Nem Chua chị Hạnh. Phải ...
+url = https://www.tiktok.com/@ngdangdung/video/7237496309215726853
 
 [www.youtube.com]
 match = -150.0%%
@@ -57,9 +57,9 @@ title = Nem chua rán món ăn vặt chuẩn Hà Nội giòn tan, dai ...
 url = https://www.instagram.com/p/CGJhaWPgssh/
 
 [www.diepxuan.com]
-match = 11.1%%
-title = Điệp Xuân Nệm siêu nhẹ
-url = https://www.diepxuan.com/nem-sieu-nhe.html
+match = -11.1%%
+title = Nệm siêu nhẹ 120x190x09 - Điệp Xuân
+url = https://www.diepxuan.com/nem-sieu-nhe-120x190x09.html
 
 [nemphuoclong.vn]
 match = -83.3%%
