--- a/images/tham-ni-xop-go-60/config.ini
+++ b/images/tham-ni-xop-go-60/config.ini
@@ -84,7 +84,7 @@ url = https://www.ssga.com/us/en/intermediary/etfs/funds/spdr-sp-oil-gas-explora
 [www.lazada.vn]
 match = -94.1%%
 title = [HCM]thảm xốp trải sàn - thảm ghép trải sàn
-url = https://www.lazada.vn/products/hcmtham-xop-trai-san-tham-ghep-trai-san-i287804887.html
+url = https://www.lazada.vn/products/hcmtham-xop-trai-san-tham-ghep-trai-san-i287804887.html?srsltid=AfmBOoqyCCwv1uEeDLnz9VWonXbXRKi3Eue15uKqD7G7KAdf4SnVDwik
 
 [tiki.vn]
 match = -88.2%%
