--- a/images/bo-bon-mua-epm19064-180x200/config.ini
+++ b/images/bo-bon-mua-epm19064-180x200/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/bo-bon-mua-epm19064-180x200.html
 lastopen = 2024-06-06 17:08:27
 
 [search]
-lastsearch = 2024-08-11 06:51:23
+lastsearch = 2024-08-11 12:14:02
 
 [everonvn.com.vn]
 match = 15.8%%
 title = Bộ Everon Epm-19064
-url = https://everonvn.com.vn/everon/754/bo-everon-epm19064
+url = https://everonvn.com.vn/everon/754/bo-everon-epm19064?srsltid=AfmBOorX55RrAf1tCRo7ClIYgky-waXJD5u_EJosUuGmz1gTBwJ2oQUQ
 
 [everon.com.vn]
 match = 5.3%%
 title = BỘ EVERON EPC 19043
-url = https://everon.com.vn/epc-19043/
+url = https://everon.com.vn/epc-19043/?srsltid=AfmBOoqqHZU81PdPlaJzusn0kNjX0mgQoIMVpjSZqizKMq8kcFebQ4Xc
 
 [demxanh.com]
 match = 18.5%%
 title = Bộ chăn ga gối EVeron EPM19068
-url = https://demxanh.com/bo-chan-ga-goi-everon-epm19068.html
+url = https://demxanh.com/bo-chan-ga-goi-everon-epm19068.html?srsltid=AfmBOoo2ZJ6N2e2UNLWbiUcRkvI5E1ZpYNw8l37DTDE6gHX7tNKLOWPI
 
 [shopee.vn]
 match = -48.1%%
