--- a/images/chieu-truc-que-lam-loai-1-15/config.ini
+++ b/images/chieu-truc-que-lam-loai-1-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-1-15.html
 lastopen = 2024-06-07 00:19:57
 
 [search]
-lastsearch = 2024-08-11 10:26:48
+lastsearch = 2024-08-11 12:15:25
 
 [thegioidemviet.vn]
 match = 32.1%%
@@ -24,7 +24,7 @@ url = https://chieutrelanlan.com/chieu-truc-p17.html
 [demxanh.com]
 match = -28.6%%
 title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
-url = https://demxanh.com/chieu-truc.html
+url = https://demxanh.com/chieu-truc.html?srsltid=AfmBOorGaEAZGrmWUr5j-VfmVmKnRAvrVMPIJEYlxtNP6mjmoqNkUPQu
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -44,7 +44,7 @@ url = https://www.sendo.vn/anh-that-100-chieu-truc-que-lam-loai-1-cao-cap-loai-c
 [www.lazada.vn]
 match = 35.7%%
 title = Chiếu trúc hạt vàng loại tốt-quế lâm 1
-url = https://www.lazada.vn/products/chieu-truc-hat-vang-loai-tot-que-lam-1-i1312554042.html
+url = https://www.lazada.vn/products/chieu-truc-hat-vang-loai-tot-que-lam-1-i1312554042.html?srsltid=AfmBOopDU5NTRQtDPAayq0Rzs-hXxorU2rKDJjKS5HzkWJDR7rHs2kEG
 
 [thegioidemonline.com]
 match = -39.3%%
