--- a/images/chieu-lac-d2-16/config.ini
+++ b/images/chieu-lac-d2-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-lac-d2-16.html
 lastopen = 2024-06-06 16:54:08
 
 [search]
-lastsearch = 2024-08-11 09:54:30
+lastsearch = 2024-08-11 12:33:22
 
 [vinatools.com]
 match = -206.7%%
 title = Kéo cắt thép tấm BESSEY D216-280, thẳng bo trái - phải
-url = https://vinatools.com/keo-cat-ton-d216-sbsk/?srsltid=AfmBOorXXdc3y_uiQPAIlEkOYu7Pg2_z_mAGWElYBDfIJZB_YdEFKI6S
+url = https://vinatools.com/keo-cat-ton-d216-sbsk/
 
 [www.vietnamairport.vn]
 match = -240.0%%
@@ -47,9 +47,9 @@ title = Cowon D2 gia nhập 'câu lạc bộ 16 GB'
 url = https://vnexpress.net/cowon-d2-gia-nhap-cau-lac-bo-16-gb-1500501.html
 
 [www.facebook.com]
-match = -213.3%%
-title = Black Kingdom - D2 - CÔNG BỐ GIẢI ĐẤU OFFLINE MANG ...
-url = https://www.facebook.com/photo.php?fbid=925380399591113&id=100063574839369&set=a.647966903999132&locale=vi_VN
+match = -186.7%%
+title = Ways Station Gaming - Ngày mai 7/3 chi nhánh 16 ...
+url = https://www.facebook.com/photo.php?fbid=1220848438345777&id=139181649845800&set=a.179106562519975
 
 [banhang.shopee.vn]
 match = -66.7%%
@@ -84,7 +84,7 @@ url = https://maiphuong.vn/products/o-cung-de-ban-lacie-d2-pro-16tb-usb-c-srs-st
 [www.instagram.com]
 match = -44.4%%
 title = Instagram
-url = https://www.instagram.com/theb6.hanoi/p/C8Ty_9_tcCJ/
+url = https://www.instagram.com/reel/C9ZWn99oX5j/
 
 [play.google.com]
 match = -193.3%%
