--- a/images/nem-everon-180x200x9/config.ini
+++ b/images/nem-everon-180x200x9/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-everon-180x200x9.html
 lastopen = 2024-06-06 17:09:32
 
 [search]
-lastsearch = 2024-08-11 01:53:13
+lastsearch = 2024-08-11 12:29:57
 
 [www.everonvn.vn]
-match = -105.0%%
-title = Đệm Everon Chính Hãng, Khuyến mại giảm giá đặc biệt
-url = https://www.everonvn.vn/san-pham/dem-everon.html
+match = -75.0%%
+title = Bảng giá đệm bông ép Everon 1m8 (1.8m hay 180 x 200)
+url = https://www.everonvn.vn/chi-tiet/dem-bong-ep-everon-1m8.html
 
 [everon.vip]
 match = 50.0%%
@@ -22,8 +22,8 @@ title = Bảng Giá Đệm Everon Năm 2024
 url = https://everonvn.com.vn/everon/344/bang-gia-dem-everon
 
 [www.changagoidemeveron.vn]
-match = -135.0%%
-title = Đệm Everon, Bảng giá đệm bông ép Everon Hàn Quốc chính ...
+match = -105.0%%
+title = Đệm Everon, Bảng giá đệm bông ép Everon Hàn Quốc ...
 url = http://www.changagoidemeveron.vn/3/everon/dem-bong-ep-everon.html
 
 [akasi.com.vn]
@@ -42,8 +42,8 @@ title = Nệm Everon
 url = https://www.diepxuan.com/everon/nem-everon.html
 
 [everon.online]
-match = -60.0%%
-title = Bảng Giá Bán Vỏ Bọc Đệm Bông Ép, Áo ...
+match = -90.0%%
+title = Bảng Giá Bán Vỏ Bọc Đệm Bông Ép Everon, Áo ...
 url = https://everon.online/blogs/news/bang-gia-ban-vo-boc-dem-bong-ep-everon
 
 [nemgiakho.com]
@@ -97,13 +97,13 @@ title = Nệm Everon Hàn Quốc cao cấp chính hãng, giá tốt 2023
 url = https://www.sieuthinem.vn/nem-everon.html
 
 [everon.com.vn]
-match = -90.0%%
-title = 180 X 200 | Showroom Chăn Ga Gối đệm EVERON
-url = https://everon.com.vn/kich-co/180-x-200/
+match = -60.0%%
+title = Đệm Bông ép PE - SALES 20%% | đệm Everon
+url = https://everon.com.vn/dem-bong-ep-everon/
 
 [everonhanquoc.vn]
-match = -140.0%%
-title = Đệm bông ép Everon 9cm, Bảng giá đệm 9 phân rẻ nhất năm ...
+match = -95.0%%
+title = Đệm bông ép Everon 9cm, Bảng giá đệm 9 phân rẻ ...
 url = https://everonhanquoc.vn/everon/12782/dem-bong-ep-everon-9cm
 
 [twitter.com]
