--- a/images/chan-5-kg-kq-khong-song/config.ini
+++ b/images/chan-5-kg-kq-khong-song/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-5-kg-kq-khong-song.html
 lastopen = 2024-06-09 23:49:54
 
 [search]
-lastsearch = 2024-08-11 11:47:06
+lastsearch = 2024-08-11 12:45:04
 
 [demxanh.com]
 match = 26.1%%
 title = Chăn lông 3kg mã 02 - Hà Nội
-url = https://demxanh.com/chan-long-3kg-ma-02.html
+url = https://demxanh.com/chan-long-3kg-ma-02.html?srsltid=AfmBOorEn3aHGu1XebSKCDxj38bVCja5GDuMFcorohErtgHQJSwCXUgO
 
 [shopee.vn]
 match = 43.5%%
@@ -19,12 +19,12 @@ url = https://shopee.vn/Chăn-lông-KQ-đẹp-loại-5kg-i.67105795.1540972315
 [www.diepxuan.com]
 match = 8.7%%
 title = Chăn KQ không sóng 5kg - Điệp Xuân
-url = https://www.diepxuan.com/chan-kq-khong-song-5kg.html
+url = https://www.diepxuan.com/chan-kq-khong-song-5kg.html?srsltid=AfmBOopwldFX0BSL_fRSurln2_cMDLQLR9gbqXYlNsHDcI9fkl24vj48
 
 [thegioidemonline.com]
 match = 45.0%%
 title = Chăn lông KQ cao cấp
-url = https://thegioidemonline.com/chan-long-kq-ma-01.html
+url = https://thegioidemonline.com/chan-long-kq-ma-01.html?srsltid=AfmBOoqupgqT9YBy1snrwyfu9VqTcYVXH4flffIHD1Axw2Zcds_aKV8G
 
 [www.youtube.com]
 match = -56.5%%
